# torrent_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  compose.yml  main.py  pyproject.toml  requirements.txt  run.sh
legacy/: config.py  main.py
src/: config.py  handlers.py  main.py  utils.py
src/handlers/: commands_handler.py  errors_handler.py
src/internal/: config.py  lexicon.py  notify_admin.py
